# py-a-tree

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml
a_tree/: __init__.py  a_tree.pyi
python/a_tree/: a_tree.pyi  a_tree_py.pyi
src/: lib.rs
tests-py/: test_a_tree.py
